[metadata]
name = taskly
description = A CLI based todo app
author = Talha Ayyaz
author_email = mtalhaayaz2005@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: readme.md
platforms = Mac, Linux
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
    importlib-metadata; python_version<"3.8"
    rich; python_version<"3.8"
    pyfiglet; python_version<"3.8"

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    taskly = todos.main:main

[tool:pytest]
addopts =
    --cov taskly --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.5
package = taskly
